--- a/main.tex
+++ b/main.tex
@@ -197,8 +197,8 @@ periodicity 8 [25] which at the origin of the name `topological axis`.
     is tied to bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, 
     tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
     dimension, Hydrogen atom), and n = 2 (String). For the number 24 of transverses dimensions, it is
-    the Kotov length, through a factor $2\pia$, with a = 137.036. For n = G, the Atiyah constant, it is the 
-    galaxy group radius, a characteristic cosmic length ($10^6 ligth-years$). For $k = e^{2}$, $y = 2e$, it is 
+    the Kotov length, through a factor 2$\pi$a, with a = 137.036. For n = G, the Atiyah constant, it is the 
+    galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, y = 2e, it is 
     the Grandcosmos radius.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
