--- a/main.tex
+++ b/main.tex
@@ -190,7 +190,7 @@ another evacuation mechanism must occur: it would be the role of massive black h
 \begin{figure}
 \centering
 \includegraphics[width=8cm,height=6.5cm]{./figures/figure}
-\caption{The Topological Axis.Double logarith (y = lnln(Y)) of main dimensionless physical quantities 
+\caption{The Topological Axis.Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the Strong dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
 periodicity 8 [25] which at the origin of the name `topological axis`.
     With unit the Electron Compton wavelength, in the macro-physics side, the Universe circumference 
@@ -203,7 +203,7 @@ periodicity 8 [25] which at the origin of the name `topological axis`.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = g \times G$, $y = 496^2$ 
+    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = \gamma \times \GAMMA$, $y \approx 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Univerrse wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
@@ -232,7 +232,8 @@ In the standard evolutionary view, the observed homogeneity of causally disconne
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
-The cosmic wavelength $\lambdabar_{M} \sim 10^{-95} m$ breaks `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed for decades. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
+The cosmic wavelength $\Topologicl Axis
+lambdabar_{M} \sim 10^{-95} m$ breaks `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed for decades. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
 (3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called `dark energy` being compatible with 7/10, this dark energy is a
