--- a/main.tex
+++ b/main.tex
@@ -203,11 +203,11 @@ periodicity 8 [25] which at the origin of the name `topological axis`.
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
-    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = \gamma \times \GAMMA$, $y \approx 496^2$ 
+    For the superstring n = 10, it is the Pion.  For $k = \pi$, $n = \gamma \times \Gamma$, $y \approx 496^2$ 
     the square of the String dimension and the tenth root of the Monster cardinal, it is
-    the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Univerrse wavelength,
+    the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
-    With unit the electron mass, n = 24 would correspond to the gravitin mass, while n = G, 
+    With unit the electron mass, n = 24 would correspond to the graviton mass, while n = G, 
     to the graviton mass
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
