--- a/main.tex
+++ b/main.tex
@@ -233,7 +233,7 @@ of space is known as the so-called `horizon problem`, and is at the origin of th
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
 furnished by the above very definition of R.
 The cosmic wavelength
-lambdabar_{M} \sim 10^{-95} m$ breaks `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed for decades. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
+$lambdabar_{M} \sim 10^{-95} m$ breaks `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed for decades. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact Planck's length is only an intermediate holographic length.
 The gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM2/R = -
 (3/10)Mc^{2}$, while the nonrelativistic kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore
 zero: the density of the so-called `dark energy` being compatible with 7/10, this dark energy is a
