--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizo
 \par
 \medskip
 {\small\parbox{11cm}{%
-To the memory of Sir Michael Atiyah\\
+$To the memory of Sir Michael Atiyah\\
 The ancestral concept of Cosmos is rediscovered through the idea of a Tachyonic Grandcosmos Multibasis Computer, inversing the Anthropic Principle and reestablishing the Laplace Determinism.
 The observed fine tuning between Physical dimensionless parameters is interpreted as relations between optimal calculation basis, announcing a huge progress in scientific computing.
 Three types of mathematical constants are considered: Large, Intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius R $\approx$ 13.812 Gly.
