[FIX] Spacing problem with formula

--- a/main.tex
+++ b/main.tex
@@ -133,9 +133,9 @@ $$
 \begin{array}{ll}
 %
 \displaystyle
-\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4} \sim \\[+8pt]  % 1st row
-(\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32}\\% 2nd row
-\sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\% 3rd row
+\lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4}\\[+8pt]  % 1st row
+\sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32}\\[+8pt] % 2nd row
+\sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
 where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is eightfold,
