--- a/main.tex
+++ b/main.tex
@@ -543,7 +543,7 @@ links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula
 , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
 \begin{equation}
-t{\hbar,\rho_{c} ,G}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}
+t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}
 \end{equation}
 This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
@@ -555,12 +555,12 @@ Indeed, even General Relativity in unable to define what is a Galilean frame, wh
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
 Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
-$$l{\hbar,\rho_{c},G_{F}} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
+$$l\{\hbar,\rho_{c},G_{F}\} = \hbar/\rho_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
 \begin{equation}
-T{\hbar,\rho_{c} ,G_{F} }\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
+T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s
 \end{equation}
-$$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
+$$T\prime\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Large Cosmologic cycle, which matches with Topological Axis at n = 30;
 the holic dimension (see below), to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
@@ -571,10 +571,10 @@ between apparently no-connected mathematical theories \cite{Borcherds}[17]. The 
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
 Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: 
 \begin{equation}
-t{G, m_{e} , g_{PN} } = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}
+t\{G, m_{e} , g_{PN} \} = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}
 \end{equation}, where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
 \begin{equation}
-t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}
+t\{G, m_{e} , g_{PN} \} = t_{K} /(F/a)^{2}
 \end{equation}
 where the above Tifft factor F/a appears. The implication of the time 
 \begin{equation}
