[ADD] lambda CMB

--- a/main.tex
+++ b/main.tex
@@ -137,7 +137,7 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-where a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV. So, the correlation is eightfold,
+this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV.  So, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
