[FIX] l to lambda

--- a/main.tex
+++ b/main.tex
@@ -143,8 +143,8 @@ The overall large number $2^{256}$ has an evident computational character, confi
 dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
 In particular, the relation $R/\lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
-background (CNB), whose wavelength is defined by $(l_{CNB} / l_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
-( l_{CNB}^{2} / l_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
+background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
 \begin{equation}
 R/r_{H(0)} \sim (4\pi l_{CMB} /r_{H(0)} )^{4}
 \end{equation}
