--- a/main.tex
+++ b/main.tex
@@ -146,7 +146,7 @@ magnitude, we infer rather precise relations. First, considering the cosmologica
 background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
 \begin{equation}
-R/r_{H(0)} \sim (4\pi l_{CMB} /r_{H(0)} )^{4}
+R/r_{H(0)} \sim (4\pi \lambda_{CMB} /r_{H(0)} )^{4}
 \end{equation}
 precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
