--- a/main.tex
+++ b/main.tex
@@ -243,7 +243,7 @@ monochrome instead of the monoradial relation above:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
-with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R_{(0)} GC /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a
+with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of the time constant $t = R/c, = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
