--- a/main.tex
+++ b/main.tex
@@ -247,13 +247,13 @@ with $R_{(0)} GC /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation of 
 factor $10^{122}$ , which can be identified with the $l_{P}$ -normalised quantum energy of vacuum, checked by
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
-In a better approximation, justified below, R is replaced in the above relation by $R\prime = 2\hbar^{2}/Gm_{N}^{3}
+In a better approximation, justified below, R is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
 \approx 18.105 Gly$, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
-physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
+physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
-of radius $R\prime$ appears as the spherical hologram representation of the outer Grandcosmos:
+of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
-S\prime_{BH}\, = \pi(R\prime/l_{P})^{2} = 2\pi R_{GC} /l_{P}
+S\prime_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
