[FIX] hbar to \hbar

--- a/main.tex
+++ b/main.tex
@@ -360,7 +360,7 @@ G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 \cite{Pdc}. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
-(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
+(\lambdabar_{e} 2/t_{K} )(\hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
