--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ Atiyah's constant enters dramatic ppb precision relations with particle data. Th
 \setcounter{page}{1}
 
 
-\markboth{Sanchez, Kotov, Grosman, Weygel, Veysseyre, Bizouard, Gueroult, Flawisky, Gayral, Back to Cosmos}{\thepage}
+\markboth{F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
 \section{Introduction: Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ratio p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_{G}\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement 10$^{-4}\!$.
