--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ Atiyah's constant enters dramatic ppb precision relations with particle data. Th
 \setcounter{page}{1}
 
 
-\markboth{F. M. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
+\markboth{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
 \section{Introduction: Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ratio p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_{G}\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement 10$^{-4}\!$.
@@ -97,7 +97,7 @@ The first section explains why, in the Computation Hypothesis, large numbers are
 
 \section {Chapter1}
 \subsection {Internal Fine Tuning and Canonical Large Numbers}
-\markright{Your Full Names.  Short Title of Your Paper}
+\markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, but this is awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
