--- a/main.tex
+++ b/main.tex
@@ -529,7 +529,7 @@ discoverer of Relativity: `use 4D space but do not confound Space and Time` has 
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
 \begin{equation}
-l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2
+l \{\hbar,G,m\} = \hbar 2 /Gm^{3} \approx R/2
 \end{equation}
 but it took 9 years to nurture this publication [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product 
 \begin{equation}
