--- a/main.tex
+++ b/main.tex
@@ -501,7 +501,7 @@ ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (
 \end{equation}
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
 
-which traduces in function of $P = m_P/m_e by ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to 10^{-7}, corresponding to 7 10^{-6} precision on the above G value:
+which traduces in function of $P = m_P/m_e by ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx 2 ln^2(2P^5/a^6)$. Moreover, to $10^{-7}$, corresponding to $7 10^{-6}$ precision on the above G value:
 
 \begin{equation}
 ln^2(P^4/a^3) + 2 ln^2(P^2/pH) \approx exp(4e – 1/a)
