--- a/main.tex
+++ b/main.tex
@@ -587,7 +587,7 @@ t\{G, m_{e} , g_{PN} \} = t_{K} /(F/a)^{2}
 \end{equation}
 where the above Tifft factor F/a appears. The implication of the time 
 \begin{equation}
-t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
+t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
 \end{equation}
 confirms the above Planck's wall breakdown.
 
