--- a/main.tex
+++ b/main.tex
@@ -760,7 +760,7 @@ The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has
 \begin{equation}
 (3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \Rightarrow e^{2}
 \end{equation}
-a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
+a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \rightarrow e$$. The first two terms define
 the occidental 12 tones scale.
 
 \subsection {The electroweak constant mathematical fine tuning}
