--- a/main.tex
+++ b/main.tex
@@ -95,8 +95,8 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so justifying at last the Cosmos vastness. In particular,  the most famous prime number of Hstory 2$^{127}\!$-1, and the Eddington's Large number = 136 $\times$ 2$^{256}\!$  are empathized. The second section will study the role of intermediate mathematical constants such as the Eddington's constant 137. The third Section involves mathematical constants, such as $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2, the simplest basis of all.
 
-\section {Chapter1}
-\subsection {Internal Fine Tuning and Canonical Large Numbers}
+\section {Chapter1. Internal Fine Tuning and Canonical Large Numbers}
+\subsection {The Famous Double Cosmic Fine-Tuning and the Topological Axis}
 \markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, but this is awkwardly called the `Double
