--- a/main.tex
+++ b/main.tex
@@ -683,6 +683,10 @@ Time, specially the non-locality phenomena, they agree for complete determinism,
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
+\begin{equation}
+a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + G + e^{\pi}
+\end{equation}
+
 \subsection{Ubiquity of $a^{a}$}
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
