--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %&latex2e
-
+Tachyonic Flickering Space-Time-Matt
 
 \documentclass[twoside,draft]{article}
 \usepackage{latexsym,e-journal}
@@ -307,7 +307,7 @@ oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 following considerations and observations confirm this hypothesis.
 
-\subsection{Single Electron Cosmology}
+\subsubsection{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
@@ -339,7 +339,7 @@ m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
 \end{equation} 
 The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
 
-\subsection{The Kotov Cosmic Coherent Oscillation Period}
+\subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
@@ -375,7 +375,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section III.
 
-\subsection{The omnipresence of the Kotov cycle in astrophysics}
+\subsubsection{The omnipresence of the Kotov cycle in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -473,7 +473,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \end{figure}
 
 
-\subsection{The Tifft, Arp and Pioneer effects}
+\subsubsection{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. If one considers
 velocity $v_{1}$ as being compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
