--- a/main.tex
+++ b/main.tex
@@ -714,7 +714,7 @@ defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ a
 simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
-\subsection{Fine-tuning with basic mathematical constants}
+\section{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
 Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
 relations with mathematical constants different from the optimal basis e, such as $\pi$ and $\gamma \approx
