--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@ The monochromatic holographic extension leads to a Grandcosmos, larger than the 
 This implies a tachyonic speed in the same ratio by respect to c, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
 The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a quasi-absolute clock.
 This new scanning space-time structure is confirmed by single-electron cosmology, connected with Kotov period, relying on Sternheimer's Biological scale factor and Atiyah's constant, which appear as privileged computational basis, as well as e, $\pi$ and a $\approx$ 137.036, in liaison with the sporadic groups.
-Atiyah's constant enters dramatic ppb precision relations with particle data. This unifies mathematics, physics, chemistry, biology and philosophy. It is predicted that the future generation of telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
+Atiyah's constant enters dramatic ppb precision relations with particle data. This predics unificaton of mathematics, informatics physics, chemistry, biology and philosophy. The future telescopes will find mature galaxies in the very far range, instead of a Dark Space, ruining definitely the standard evolutionary cosmology, ill-founded on an imperfect Cosmological Principle.
 %% TODO: Insérer axe topologique
 }}\smallskip
 \end{center}]{%
