--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@ The observed fine tuning between Physical dimensionless parameters is interprete
 Three types of mathematical constants are considered: Large, Intermediate and close to unity. The famous Large Number problem is resolved by Eddington's statistical theory and the gravitational Hydrogen Molecule model, leading to the visible Universe horizon radius R $\approx$ 13.812 Gly.
 The extension of the double cosmic correlation defines a Topological Axis using Euler-Napier constant e as primary basis, confirming String Theory, Cartan-Bott periodicity and the 30 holic dimensions corresponding to the simplest physical diophantine equation T$^2\!$ = L$^3\!$ = M$^5\!$ = N$^{30}\!$.
 This dimension n = 30 corresponds to the common time, about 10$^{58}\!$ s, given by two mandatory dimensional analysis, interpreted as the Supercycle period.
-The visible Universe wavelength `Topon`: 2G$\hbar$/Rc$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to n $\approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
+The visible Universe wavelength `Topon`: 2$G$$\hbar$/$R$c$^3\!$ $\approx$ 4 $\times$ 10$^{-96}\!$ m, corresponds to n $\approx$ 2e$^e\!$ and enters the 1D mono-radial holographic extension of the Bekenstein-Hawking Universe entropy, implying the critical condition, and breaking Planck's wall by a factor 10$^{61}\!$.
 The monochromatic holographic extension leads to a Grandcosmos, larger than the visible Universe by the same factor 10$^{61}\!$.
 This implies a tachyonic speed in the same ratio by respect to c, justifying the Planck renormalisation of the Vacuum Energy, independently checked by the Casimir effect.
 The couple Universe-Grandcosmos is confirmed by a dramatic geo-dimensional analysis, where Length, Time and Mass are considered as unit vectors in a 3D Super-space. A matter-antimatter 10$^{104}\!$ Hz Oscillatory Bounce unifies standard Single Bang with steady-state cosmology, but suppress Relativity in cosmology at large, reestablishing the Newton Absolute Space-Time realized by the Microwave Cosmic Radiation, while Kotov cycle defines a quasi-absolute clock.
