--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@ So, when Dalton found whole numbers in chemical reactions, he was prefiguring th
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity.
 
-The first section explains \textit{why}, in the Computation Hypothesis, large numbers are necessary, so justifying at last the Cosmos vastness. In particular,  the most famous prime number of Hstory 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$  and the cardinal order of the onster group are empathized. The second section will study the role of intermediate mathematical constants such as the Eddington's constant 137. The third Section invvolves the mathematical constants $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2.
+The first section explains, from the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, the most famous prime number of Hstory 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the onster group are empathized. The second section will study the intermediate mathematical constants, of Eddington, Atiyah, Sternheimer and Matthieu. The third Section invvolves the mathematical constants $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2.
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 \subsection {The Famous Double Cosmic Fine-Tuning and the Topological Axis}
