--- a/main.tex
+++ b/main.tex
@@ -91,9 +91,9 @@ The fact that three parameters, out of about 30, are so clearly emerging means t
 So, when Dalton found whole numbers in chemical reactions, he was prefiguring the atoms and Chemistry. The same for Balmer, spectral lines and wave mechanics. The same for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he was prefiguring Genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} indeed a characteristic of deterministic computation, which could proceed by optimal algorithms, so en lighting the above Hierarchy Principle.
 
 \subsection{Plan}
-This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity.
+This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2.
 
-The first section explains, from the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, the most famous prime number of Hstory 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the onster group are empathized. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah, Sternheimer and Matthieu. The third Section involves the constants $\pi$ and $\gamma$. By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2.
+The first section explains, from the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah, Sternheimer and Matthieu. The third Section involves the constants $\pi$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 \subsection {The Famous Double Cosmic Fine-Tuning and the Topological Axis}
