--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ Atiyah's constant enters dramatic ppb precision relations with particle data. Th
 
 \markboth{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}{\thepage}
 
-\section{Introduction: Deterministic Computation and Hierarchy Principle}
+\section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31) known with 0.23 ppb precision and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
 One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on a and aG from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics.... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
