--- a/main.tex
+++ b/main.tex
@@ -96,19 +96,19 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 The first section explains, from the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah, Sternheimer and Matthieu. The third Section involves the constants $\pi$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics
 \subsection {The Famous Double Cosmic Fine-Tuning and the Topological Axis}
 \markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
-The most famous fine tuning implies cosmic quantities, but this is awkwardly called the `Double
+The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in steady-state cosmology based on the Perfect Cosmological Principle (spatial and temporal
+clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal
 homogeneity) [3].
 This Cosmic Fine-Tuning leads directly to a Gravitational Hydrogen model of the universe [3]
 defining the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$ , the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
-\begin{equation}
-\lambdabar_{e} = \hbar/cm_{e}
-\end{equation} is the Electron Compton reduced wavelength, and the
+$\lambdabar_{e} = \hbar/cm_{e}$
+is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
 \begin{equation}
 a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}
