--- a/main.tex
+++ b/main.tex
@@ -110,10 +110,9 @@ Hydrogen molecule, where
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
-\begin{equation}
-a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}
-\end{equation}, so the speed c is eliminated. This conforms with
-Coherent Cosmology which needs signal celerity far exceeding c. This gives R = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+$a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}$
+So, \textit{the speed c is eliminated}, in accordance with
+Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
