--- a/main.tex
+++ b/main.tex
@@ -110,15 +110,15 @@ Hydrogen molecule, where
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
-$a_{G} = \hbar c/G \cdot m_{H} \cdot m_{p}$
+$a_{G} = \hbar c/G \cm_{H} \cm_{p}$
 So, \textit{the speed c is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
-Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
-10^{-96} m$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
+
+Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 10^{-96} m$ of the visible Universe of mass $M$ with a matter-wave. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+corresponding to $n \approx 2e^{e}$ , to $0.01\%$. The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
 and results from the imbrication of relations of the form 
 \begin{equation}
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
