--- a/main.tex
+++ b/main.tex
@@ -110,7 +110,7 @@ Hydrogen molecule, where
 $\lambdabar_{e} = \hbar/cm_{e}$
 is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
-$a_{G} = \hbar c/G \cm_{H} \cm_{p}$
+$a_{G}$ = $\hbarc/Gm_{p}m_{H}$
 So, \textit{the speed c is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
