--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,7 @@ is the Electron Compton reduced wavelength, and the
 gravitational coupling constant 
 $a_{G}$ = $\hbar$$c$/$G$$m_{p}$$m_{H}$
 So, \textit{the speed c is eliminated}, in accordance with
-Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ = 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
+Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R$ $\approx$ 13,812 Gly, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
