--- a/main.tex
+++ b/main.tex
@@ -118,12 +118,12 @@ directly by the 1a type novae, while the standard optimization of 6 parameters r
 value of 9\%.
 
 Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 10^{-96} m$ of the visible Universe of mass $M$ with a matter-wave. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
-corresponding to $n \approx 2e^{e}$ , to $0.01\%$. The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
+corresponding to $n \approx 2e^{e}$ , to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 \begin{equation}
 \lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
 \end{equation}
-, followed by 
+followed by 
 \begin{equation}
 l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l\prime_{micro} )^{2}
 \end{equation}:
@@ -136,7 +136,7 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$ , appears, with mass about 2 MeV.  So, the correlation is eightfold,
+this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV.  So, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
