--- a/main.tex
+++ b/main.tex
@@ -126,7 +126,7 @@ and results from the imbrication of relations of the form
 followed by 
 \begin{equation}
 l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l\prime_{micro} )^{2}
-\end{equation}:
+\end{equation}
 $$
 \begin{array}{ll}
 %
@@ -140,7 +140,7 @@ this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a s
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
-In particular, the relation $R/\lambdabar_{e} \sim (l_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
+In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
