--- a/main.tex
+++ b/main.tex
@@ -128,6 +128,7 @@ followed by
 l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l\prime_{micro} )^{2}
 \end{equation}
 $$
+leading to:
 \begin{array}{ll}
 %
 \displaystyle
