--- a/main.tex
+++ b/main.tex
@@ -152,9 +152,10 @@ R/r_{H(0)} \sim (4\pi \lambda_{CMB} /r_{H(0)} )^{4}
 precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
-In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where W is the mass ratio W boson-
-Electron. With the above R value, one observes the following more symmetrical relation involving
-the other (neutral) weak boson Z, in the 0.01\% indetermination of W and Z:
+
+In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
+Electron. With the above $R$ value, one observes the following more symmetrical relation involving
+the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 $R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4$
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Chapter 3, by intervention of canonical mathematical constants.
