--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,9 @@ antimatter Oscillatory Bounce [5].
 In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
-$R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4$
+\begin{equation}
+R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4
+\end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Chapter 3, by intervention of canonical mathematical constants.
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
