--- a/main.tex
+++ b/main.tex
@@ -141,9 +141,11 @@ $$
 this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV.  So, the correlation is eightfold,
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
-dramatic appearance of the Eddington Large Number, and allows to approach each physical length.
+dramatic appearance of the Eddington Large Number.
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
-magnitude, we infer rather precise relations. First, considering the cosmological neutrino
+magnitude, we infer rather precise relations. With the Hydrogen radius r_{H(0), we infer $R/r_{H(0)} \sim (4\pi \lambda_{CMB} /r_{H(0)} )^{4}$
+
+First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
 \begin{equation}
