--- a/main.tex
+++ b/main.tex
@@ -143,7 +143,7 @@ including, apart the two ones above, three relations which have been independent
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
-magnitude, we infer rather precise relations. With the Hydrogen radius $r_{H)$, we infer $R/r \approx (4\pi \lambda_{CMB} /r_{H(0)} )^{4}$
+magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $R/r \approx (4\pi \lambda_{CMB} /r_{H(0)} )^{4}$
 
 First, considering the cosmological neutrino
 background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we have $$R/ \lambdabar_{e} \sim
