--- a/main.tex
+++ b/main.tex
@@ -145,13 +145,9 @@ dramatic appearance of the Eddington Large Number.
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $R/r \approx (4\pi \lambda_{CMB} /r_{H(0)} )^{4}$
 precise to $0.6\%$. 
-Considering the standard cosmological neutrino
-background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $$R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$. Second, with the Hydrogen radius $r_{H(0)} = a\lambdabar_{e}$ , we infer 
-\begin{equation}
-R/r_{H(0)} \sim (4\pi \lambda_{CMB} /r_{H(0)} )^{4}
-\end{equation}
-precise to $0.6\%$. One notes that the appearance of the neutrino field is conform
+Considering the standard cosmological neutrino background (CNB), whose wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $$R/ \lambdabar_{e} \approx
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$.
+ One notes that the appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
