--- a/main.tex
+++ b/main.tex
@@ -96,8 +96,8 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 The first section explains, from the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. In particular, we consider the famous prime number 2$^{127}\!$-1, the Eddington's Large number 136 $\times$ 2$^{256}\!$ and the cardinal order of the Monster group. The second section will study intermediate mathematical constants, of Eddington (137), Green-Schwarz (496), Atiyah, Sternheimer and Matthieu. The third Section involves the constants $\pi$ and $\gamma$. 
 
 \section {Internal Fine Tuning and Canonical Large Numbers}
-We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics
-\subsection {The Famous Double Cosmic Fine-Tuning and the Topological Axis}
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
+\subsection {The Cosmic Fine-Tuning and the Topological Axis}
 \markright{F. Sanchez, \ V. Kotov, \ M. Grosmann, \ D. Weigel, \ R. Veysseyre, \ C. Bizouard, \ N. Flawisky, \ D. Gayral, \ L. Gueroult, Back to Cosmos}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
